force-app/main/default/objects/Candidate_Compliance__c/Candidate_Compliance__c.object-meta.xml
<CustomObject>
    <label>Candidate Compliance</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Candidate Compliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Compliances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>