force-app/main/default/objects/Candidate_Compliance__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Candidate Compliances</relationshipLabel>
    <relationshipName>Candidate_Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>