force-app/main/default/objects/Candidate_Compliance__c/fields/Compliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Type__c</fullName>
    <label>Compliance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Background Check</fullName>
            </value>
            <value>
                <fullName>Drug Screening</fullName>
            </value>
            <value>
                <fullName>Identity Verification</fullName>
            </value>
            <value>
                <fullName>Police Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>