force-app/main/default/objects/Candidate_Compliance__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>